# spotify-stats

./: .env  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  app.py  pyproject.toml
spotify_stats/: get_cover.py  get_streams.py  stats.py  style_tables.py
static/: pandas_table_style.css  style.css
templates/: bar_chart.html  index.html
