[tool.poetry]
name = "spotify-stats"
version = "0.1.0"
description = "Enhanced Spotify statistics."
authors = ["Jakob Klotz <88966745+kometenmelodie@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.0"
spotipy = "^2.20.0"
requests = "^2.28.1"
pillow = "^10.0.1"
flask = "^2.2.2"
python-dotenv = "^0.21.0"
plotly = "^5.11.0"
flask-caching = "^2.0.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"

[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001"
]
line-length = 79
target-version = "py311"

[tool.black]
line-length = 79
target-version = ["py311"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
