[tool.poetry]
name = "spotify-stats"
version = "0.1.0"
description = "Enhanced Spotify statistics."
authors = ["Jakob Klotz <88966745+kometenmelodie@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.2"
spotipy = "^2.20.0"
requests = "^2.28.1"
pillow = "^10.2.0"
flask = "^3.0.0"
python-dotenv = "^1.0.0"
plotly = "^5.18.0"
flask-caching = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"

[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001"
]
line-length = 79
target-version = "py311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
