[tool.poetry]
name = "spotify-stats"
version = "0.1.0"
description = "Enhanced Spotify statistics."
authors = ["Jakob Klotz <88966745+kometenmelodie@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.2.2"
spotipy = "^2.24.0"
requests = "^2.32.3"
pillow = "^10.4.0"
flask = "^3.0.3"
python-dotenv = "^1.0.0"
plotly = "^5.24.0"
flask-caching = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"

[tool.ruff]
lint.select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001"
]
line-length = 79
target-version = "py311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
